refactor: simplify SocialsIcons styles by removing unnecessary padding and borders

--- a/app/_components/rootLayout/SocialsIcons.module.css
+++ b/app/_components/rootLayout/SocialsIcons.module.css
@@ -1,12 +1,5 @@
 .socials{
     display: flex;
+    gap: 1rem;
 }
 
-.socials a{
-    padding: 0 10px;
-    border-right: 1px solid var(--foreground)
-}
-
-.socials a:last-child{
-    border-right: none;
-}
