--- a/app/_components/rootLayout/Navigation.module.css
+++ b/app/_components/rootLayout/Navigation.module.css
@@ -1,14 +1,15 @@
 .logo {
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    /* height: 50px; */
     border-radius: 50%;
     flex-shrink: 0;
 }
 
 .logo img {
     width: 100%;
-    height: 100%;
-    border-radius: 50%;
+    height:100% ;
+
+    /* border-radius: 50%; */
 }
 
 .nav {
