--- a/app/_components/member/MemberCard.module.css
+++ b/app/_components/member/MemberCard.module.css
@@ -3,12 +3,15 @@
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 16px;
-    margin: 16px;
-    width: 400px;
+    width: 300px;
     transition: box-shadow 0.3s ease;
     display: flex;
     flex-direction: column;
     gap: 5px;
+    -webkit-transition: box-shadow 0.3s ease;
+    -moz-transition: box-shadow 0.3s ease;
+    -ms-transition: box-shadow 0.3s ease;
+    -o-transition: box-shadow 0.3s ease;
 }
 .memberCard:hover{
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
@@ -16,8 +19,8 @@
 .memberCard img{
     border-radius: 8px;
     width: 100%;
-    height: 250px;
-    object-fit:cover;
+    /* height: 250px; */
+    object-fit:contain;
 }
 
 .memberTitle{
@@ -33,8 +36,16 @@
 .memberDescription{
     font-size: 16px;
     color: #6b7280;
+    max-height: 100px;
+    /* max height and if the text overflow add readmore button and hedden it */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 5;  
+    -webkit-box-orient: vertical;
+    margin-bottom: 10px;
 }
- 
+
 /* social media accuents */
 
 .memberCardSocials{
