--- a/app/_components/rootLayout/Navigation.module.css
+++ b/app/_components/rootLayout/Navigation.module.css
@@ -15,9 +15,14 @@
 .nav {
     display: flex;
     align-items: center;
+    position: fixed;
+    width: 100%;
+    top: 0;
     padding: 1rem;
     gap: 1rem;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    background-color: white;
 }
 
 .nav ul {
