--- a/app/globals.css
+++ b/app/globals.css
@@ -86,125 +86,23 @@ body {
   font-size: 20px;
   text-align: center;
   color: #797979;
-
 }
+
+@media screen and (max-width: 768px) {
+  .special-heading {
+    font-size: 60px;
+  }
+
+  .special-heading+p.special-heading {
+    font-size: 15px;
+  }
+  
+}
+
+
 
 /* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
 } */
-
-/* start global Carousel  */
-/* Carousel container */
-.carousel {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  overflow: hidden;
-}
-
-/* Carousel track (scrollable area) */
-.carousel-track {
-  display: flex;
-  gap: 20px;
-  scroll-snap-type: x mandatory;
-  overflow-x: auto;
-  scroll-behavior: smooth;
-  padding: 20px 0;
-}
-
-/* Individual carousel item */
-.carousel-item {
-  flex: 0 0 auto;
-  display: flex;
-  width: 350px;
-  scroll-snap-align: center;
-  transition: transform 0.3s ease;
-}
-
-/* .carousel-item:hover {
-  transform: scale(1.05);
-} */
-
-/* Navigation buttons */
-.carousel-button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  /*acolortosee*/
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white;
-  border: none;
-  padding: 5px 10px;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 1.5rem;
-  transition: background-color 0.3s ease;
-  z-index: 10;
-  opacity: 0.6;
-}
-
-.carousel-button:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-  opacity: 1;
-}
-
-.carousel-button.prev {
-  left: 0px;
-}
-
-.carousel-button.next {
-  right: 0px;
-}
-
-/* Hide scrollbar for the carousel track */
-.carousel-track::-webkit-scrollbar {
-  display: none;
-}
-
-.carousel-track {
-  -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
-  /* Firefox */
-}
-
-/* Responsive adjustments */
-@media (max-width: 768px) {
-  .carousel-button {
-    opacity: 0.2;
-  }
-
-  .carousel-item {
-    width: 90%;
-    /* Adjust width for mobile */
-  }
-}
-
-@media (min-width: 768px) {
-  .carousel-item {
-    width: 70%;
-    /* Adjust width for tablets */
-  }
-}
-
-@media (min-width: 1024px) {
-  .carousel-item {
-    width: 50%;
-    /* Adjust width for desktops */
-  }
-}
-
-@media (min-width: 1280px) {
-  .carousel-item {
-    width: 33.33%;
-    /* Show 3 items per row for larger screens */
-  }
-}
-
-/* end global Carousel */
