feat: Add homepage layout with sections for landing, about, and carousel of events
- Created `page.tsx` and `page.module.css` for the homepage layout.
- Implemented `LandingSection`, `AboutSection`, and `CarouselSection` components.
- Added `Card` component to display event details in the carousel.
- Introduced responsive styles for various components.
- Added button component with customizable styles and functionality.
- Integrated social media icons in the footer.
- Implemented language switcher in the navigation.
- Set up YouTube video fetching functionality.
- Established internationalization support with routing and middleware.

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -12,6 +12,15 @@
   --border: #eaeaea;
 }
 
+html {
+  font-family: var(--font-inter); /* Default font */
+}
+
+html[lang="ar"] {
+  font-family: var(--font-cairo); /* Arabic font */
+}
+
+
 /* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -61,7 +70,6 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -86,6 +94,7 @@ body {
   font-size: 20px;
   text-align: center;
   color: #797979;
+  letter-spacing: normal;
 }
 
 @media screen and (max-width: 768px) {
