--- a/src/app/_components/Card/Card.module.css
+++ b/src/app/_components/Card/Card.module.css
@@ -81,3 +81,48 @@
     gap: 10px;
     margin-top: 10px;
 }
+
+
+.videoPlaceholder {
+    position: relative;
+    width: 100%;
+    cursor: pointer;
+    background-color: #000;
+  }
+.videoPlaceholder img {
+    width: 100%;
+    /* height: 100%; */
+    object-fit: cover;
+    border-radius: 8px;
+    object-fit: contain;
+}
+  
+  .videoPlaceholder .playIcon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 50%;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s ease;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -webkit-transition: background-color 0.3s ease;
+    -moz-transition: background-color 0.3s ease;
+    -ms-transition: background-color 0.3s ease;
+    -o-transition: background-color 0.3s ease;
+}
+  
+  .videoPlaceholder .playIcon:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  
+  .video {
+    border: none;
+  }
