--- a/src/app/_components/Page/LandingSection.module.css
+++ b/src/app/_components/Page/LandingSection.module.css
@@ -2,7 +2,7 @@
 .landingSection {
     width: 100%;
     height: 100vh;
-    background-image: url("../../../public/landing2.png");
+    background-image: url("../../../../public/landing2.png");
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -36,7 +36,7 @@
 @media screen and (max-width: 768px) {
     .landingSection {
         height: 100vh;
-        background-image: url("../../../public/landing-mobile.png");
+        background-image: url("../../../../public/landing-mobile.png");
         display: flex;
         justify-content: center;
         align-items: center;
