--- a/src/app/_components/rootLayout/Navigation.module.css
+++ b/src/app/_components/rootLayout/Navigation.module.css
@@ -1,15 +1,11 @@
 .logo {
-    width: 100px;
-    /* height: 50px; */
     border-radius: 50%;
     flex-shrink: 0;
 }
 
 .logo img {
     width: 100%;
-    height:100% ;
-
-    /* border-radius: 50%; */
+    height: 100%;
 }
 
 .nav {
@@ -18,11 +14,15 @@
     position: fixed;
     width: 100%;
     top: 0;
-    padding: 1rem;
+    padding: 1.5rem;
     gap: 1rem;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     background-color: white;
+}
+
+.nav>span {
+    font-size: 1.1rem;
 }
 
 .nav ul {
@@ -30,12 +30,19 @@
     display: flex;
     gap: 1rem;
     margin-left: auto;
+    font-size: 1.2rem;
+}
+
+
+html[lang="ar"] .nav ul {
+    flex-direction: row-reverse;
 }
 
 .nav ul li {
     display: inline-block;
     color: var(--foreground);
     padding: .5rem;
+
 }
 
 .nav ul li a {
@@ -50,12 +57,41 @@
     border-radius: 5px;
 }
 
+.langSwitch {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    background-color: var(--primary);
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    margin-left: 1rem;
+    transition: background-color 0.3s ease;
+
+}
+
+.langSwitch:hover {
+    background-color: var(--primary-dark);
+}
+
+.langSwitch svg {
+    font-size: 1.2rem;
+}
+
 
 
 /* responsive  */
 @media (max-width: 768px) {
+    .logo {
+        width: 80px;
+    }
+
     .nav {
         height: 60px;
+        padding: 1.5rem .5rem;
     }
 
     .nav ul {
@@ -69,6 +105,10 @@
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         z-index: 1000;
         width: 100%;
+    }
+
+    .nav>span {
+        font-size: .7rem;
     }
 
     .nav ul.active {
@@ -87,5 +127,24 @@
     .nav ul li:active {
         background-color: #ddd;
         color: var(--foreground);
+    }
+
+    .langSwitch {
+        font-size: 0.8rem;
+        padding: 0.5rem 0.8rem;
+        position: fixed;
+        right: 1rem;
+        bottom: 1rem;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        
+    }
+    .langSwitch svg {
+        display: none;
     }
 }
