--- a/src/app/_components/rootLayout/Navigation.module.css
+++ b/src/app/_components/rootLayout/Navigation.module.css
@@ -38,17 +38,14 @@ html[lang="ar"] .nav ul {
     flex-direction: row-reverse;
 }
 
-.nav ul li {
+.nav ul li a {
     display: inline-block;
     color: var(--foreground);
-    padding: .5rem;
-
-}
-
-.nav ul li a {
     text-decoration: none;
     color: inherit;
     font-weight: bold;
+    width: 100%;
+    height: 100%;
 }
 
 .nav ul li:hover,
@@ -86,7 +83,7 @@ html[lang="ar"] .nav ul {
 /* responsive  */
 @media (max-width: 768px) {
     .logo {
-        width: 80px;
+        width: 90px;
     }
 
     .nav {
@@ -107,26 +104,37 @@ html[lang="ar"] .nav ul {
         width: 100%;
     }
 
-    .nav>span {
-        font-size: .7rem;
+    html[lang="ar"] .nav ul {
+        flex-direction: column;
+        text-align: right;
     }
+
+    .nav>span {
+        font-size: .9rem;
+    }
+
+    html[lang="ar"] .nav>span {
+        direction: rtl;
+    }
+
 
     .nav ul.active {
         display: flex;
     }
 
-    .nav ul li {
-        padding: 1rem;
-    }
-
     .nav ul li:last-child {
         margin-bottom: 0;
     }
-
+    
     .nav ul li:hover,
-    .nav ul li:active {
+    .nav ul li.active {
         background-color: #ddd;
         color: var(--foreground);
+    }
+    .nav ul li a {
+        padding: 1rem;
+        width: 100%;
+        height: 100%;
     }
 
     .langSwitch {
