--- a/src/app/_components/Card/Card.module.css
+++ b/src/app/_components/Card/Card.module.css
@@ -19,7 +19,7 @@
 .card img {
     border-radius: 8px;
     width: 100%;
-    height: 250px;
+    height: 400px;
     object-fit: cover;
 }
 
@@ -56,6 +56,7 @@
     cursor: pointer;
     font-weight: bold;
     margin-left: 5px;
+    text-wrap: nowrap;
 }
 
 .card .button {
