--- a/src/app/_components/rootLayout/Navigation.module.css
+++ b/src/app/_components/rootLayout/Navigation.module.css
@@ -1,6 +1,8 @@
 .logo {
     border-radius: 50%;
     flex-shrink: 0;
+    cursor : pointer;
+    height: 45px;
 }
 
 .logo img {
@@ -22,7 +24,8 @@
 }
 
 .nav>span {
-    font-size: 1.1rem;
+    font-size: 1.4rem;
+    font-weight: bold;
 }
 
 .nav ul {
@@ -43,7 +46,6 @@ html[lang="ar"] .nav ul {
     color: var(--foreground);
     text-decoration: none;
     color: inherit;
-    font-weight: bold;
     width: 100%;
     height: 100%;
 }
