--- a/src/app/_components/Carousel/Carousel.module.css
+++ b/src/app/_components/Carousel/Carousel.module.css
@@ -77,19 +77,19 @@
     /* Firefox */
   }
   
-  @media (max-width: 1200px) {
+  @media (max-width: 1023px) {
     .carouselItem {
-      width: calc(100% / 2 - 20px);
+      width: calc(100% / 2 - 50px);
     }
   }
   
   @media (max-width: 768px) {
     .carouselButton {
-      opacity: 0.2;
+      opacity: 0.6;
     }
   
     .carouselItem {
-      width: 100%;
+      width: calc(100% - 25px);
     }
   }
   
