--- a/src/app/_components/Button/Button.module.css
+++ b/src/app/_components/Button/Button.module.css
@@ -17,6 +17,11 @@
   background-color: var(--hover-bg-color);
 }
 
+.button a{
+  color: inherit;
+  text-decoration: none;
+}
+
 @media screen and (max-width: 768px) {
   .button {
     font-size: 1rem;
