--- a/src/app/_components/Card/Card.module.css
+++ b/src/app/_components/Card/Card.module.css
@@ -10,6 +10,7 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 10px;
+    min-height: 720px;
 }
 
 .card:hover {
@@ -26,7 +27,7 @@
 
 .card h2 {
     font-size: 24px;
-    margin: 0;
+    margin: 0 0px;
 }
 
 .card img {
@@ -36,7 +37,7 @@
 
 .date,
 .location,
-.time{
+.time {
     font-size: 14px;
     color: #888;
 }
@@ -51,7 +52,8 @@
     margin-bottom: 10px;
     position: relative;
 }
-.readMore{
+
+.readMore {
     color: var(--primary);
     cursor: pointer;
     font-weight: bold;
@@ -77,7 +79,7 @@
     cursor: not-allowed;
 }
 
-.icons{
+.icons {
     display: flex;
     gap: 10px;
     margin-top: 10px;
@@ -89,7 +91,8 @@
     width: 100%;
     cursor: pointer;
     background-color: #000;
-  }
+}
+
 .videoPlaceholder img {
     width: 100%;
     /* height: 100%; */
@@ -97,8 +100,8 @@
     border-radius: 8px;
     object-fit: contain;
 }
-  
-  .videoPlaceholder .playIcon {
+
+.videoPlaceholder .playIcon {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -119,11 +122,19 @@
     -ms-transition: background-color 0.3s ease;
     -o-transition: background-color 0.3s ease;
 }
-  
-  .videoPlaceholder .playIcon:hover {
+
+.videoPlaceholder .playIcon:hover {
     background-color: rgba(0, 0, 0, 0.8);
-  }
-  
-  .video {
+}
+
+.video {
     border: none;
-  }
+}
+
+
+@media (max-width: 1023px) {
+    .card img {
+        height: 300px;
+    }
+
+}
