--- a/src/app/_components/Page/LandingSection.module.css
+++ b/src/app/_components/Page/LandingSection.module.css
@@ -8,6 +8,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .landingSection .contentContainer {
