--- a/src/app/_components/rootLayout/Navigation.module.css
+++ b/src/app/_components/rootLayout/Navigation.module.css
@@ -8,6 +8,7 @@
 .logo img {
     width: 100%;
     height: 100%;
+    object-fit: contain;
 }
 
 .nav {
@@ -33,7 +34,7 @@
     display: flex;
     gap: 1rem;
     margin-left: auto;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
 }
 
 
@@ -69,7 +70,6 @@ html[lang="ar"] .nav ul {
     font-size: 1rem;
     margin-left: 1rem;
     transition: background-color 0.3s ease;
-
 }
 
 .langSwitch:hover {
@@ -83,9 +83,27 @@ html[lang="ar"] .nav ul {
 
 
 /* responsive  */
+@media (max-width: 1024px) {
+    .logo {
+        width: 120px;
+    }
+
+    .nav {
+        padding: 1.5rem 1rem;
+    }
+
+    .nav>span {
+        font-size: 1.1rem;
+    }
+
+    .nav ul {
+        font-size: 1.0rem;
+    }
+}
+
 @media (max-width: 768px) {
     .logo {
-        width: 90px;
+        width: 110px;
     }
 
     .nav {
