--- a/src/app/_components/Page/LandingSection.module.css
+++ b/src/app/_components/Page/LandingSection.module.css
@@ -2,7 +2,7 @@
 .landingSection {
     width: 100%;
     height: 100vh;
-    background-image: url("../../../../public/landing2.png");
+    background-image: url("../../../../public/landing3.jpg");
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -38,11 +38,13 @@
 @media screen and (max-width: 768px) {
     .landingSection {
         height: 100vh;
-        background-image: url("../../../../public/landing-mobile.png");
+        background-image: url("../../../../public/landing3.jpg");
         display: flex;
         justify-content: center;
         align-items: center;
         text-align: center;
+    background-position: -433px;
+
     }
     .landingSection .contentContainer h1 {
         font-size: 2rem;
